<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>me.minecraft</groupId>
  <artifactId>MinecraftPvpPlugin</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>MinecraftPvpPlugin</name>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <kotlin.version>1.9.22</kotlin.version>
  </properties>

  <build>
    <plugins>
        <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
        <plugin>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-maven-plugin</artifactId>
            <version>${kotlin.version}</version>
            <executions>
                <execution>
                    <id>compile</id>
                    <phase>compile</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                    <configuration>
                        <sourceDirs>
                            <source>src/main/java</source>
                            <source>target/generated-sources/annotations</source>
                        </sourceDirs>
                    </configuration>
                </execution>
                <execution>
                    <id>test-compile</id>
                    <phase>test-compile</phase>
                    <goals>
                        <goal>test-compile</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <jvmTarget>21</jvmTarget>
            </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
            <executions>
                <execution>
                    <id>default-compile</id>
                    <phase>none</phase>
                </execution>
                <execution>
                    <id>default-testCompile</id>
                    <phase>none</phase>
                </execution>
                <execution>
                    <id>compile</id>
                    <phase>compile</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                </execution>
                <execution>
                    <id>testCompile</id>
                    <phase>test-compile</phase>
                    <goals>
                        <goal>testCompile</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
            <source>21</source>
            <target>21</target>
              <compilerArgs>--enable-preview</compilerArgs>
          </configuration>
        </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>spigotmc-repo</id>
          <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>nms-repo</id>
          <url>https://repo.codemc.io/repository/nms/</url>
      </repository>
<!--      <repository>-->
<!--          <id>dmulloy2-repo</id>-->
<!--          <url>https://repo.dmulloy2.net/repository/public/</url>-->
<!--      </repository>-->
  </repositories>

  <dependencies>
<!--      <dependency>-->
<!--          <groupId>org.github.spigot</groupId>-->
<!--          <artifactId>1.8.8</artifactId>-->
<!--          <version>1.8.8</version>-->
<!--          <scope>system</scope>-->
<!--          <systemPath>${project.basedir}/lib/spigot-1.8.8.jar</systemPath>-->
<!--      </dependency>-->
      <dependency>
          <groupId>org.github.spigotmc</groupId>
          <artifactId>1.8.8</artifactId>
          <version>1.8.8-R0.1-SNAPSHOT</version>
          <classifier>remapped-mojang</classifier>
          <scope>system</scope>
          <systemPath>${project.basedir}/lib/spigot-1.8.8.jar</systemPath>
      </dependency>
<!--      <dependency>-->
<!--          <groupId>com.comphenix.protocol</groupId>-->
<!--          <artifactId>ProtocolLib</artifactId>-->
<!--          <version>4.8.0</version>-->
<!--      </dependency>-->
      <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-stdlib-jdk8</artifactId>
          <version>${kotlin.version}</version>
      </dependency>
      <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-test</artifactId>
          <version>${kotlin.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jetbrains.kotlinx</groupId>
          <artifactId>dataframe</artifactId>
          <version>0.8.1</version>
      </dependency>
      <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-stdlib</artifactId>
          <version>1.9.22</version>
      </dependency>
      <dependency>
          <groupId>org.json</groupId>
          <artifactId>json</artifactId>
          <version>20240303</version>
      </dependency>
  </dependencies>
</project>
